# vibe

./: README.md  build.sh  pd-netrecv.pd
.github/workflows/: build.yml
design/: general.md  http.md  store.md  vibe.md  vibed.md
vibe/: .gitignore  package.json  vite.config.ts
vibe-types/: Cargo.toml
vibe-types/src/: command.rs  lib.rs  models.rs  mosc.rs
vibe/src/: App.vue  main.ts  router.ts  types.d.ts
vibe/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
vibe/src-tauri/capabilities/: default.json
vibe/src-tauri/src/: build.rs  lib.rs
vibe/src/components/: MessageProgramPane.vue  MidiProgramPane.vue  PlayControlBar.vue  TracksBanner.vue
vibe/src/components/patterns/: MidiProgramPane.vue
vibe/src/composables/: useVibed.ts
vibe/src/routes/: ControlsView.vue  EventsView.vue  PatternsView.vue  ProjectView.vue  SlidersView.vue  TracksView.vue
vibe/src/types/: command.d.ts  models.d.ts
vibed/: .gitignore  Cargo.toml
vibed/src/: app.rs  command.rs  communicator.rs  controller.rs  handler.rs  main.rs  models.rs  mosc.rs  osc.rs  state.rs  store.rs  ticker.rs
vibed/src/app/: action.rs  communicator.rs  mod.rs  state.rs  ticker.rs
