[package]
name = "vibed"
version = "0.1.0"
edition = "2024"

[dependencies]
# Server
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
