[package]
name = "vibed"
version = "0.1.0"
edition = "2024"

[dependencies]
# Server
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
# Async
futures = "0.3"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# OSC
rosc = "0.11"
# Types
vibe-types = { path = "../vibe-types/" }
