[package]
name = "vibed"
version = "0.1.1"
edition = "2024"
license = "MIT"

[build-dependencies]
built = { version = "0.8", features = ["chrono"] }

[dependencies]
# Server
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
# Async
futures = "0.3"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
built = { version = "0.8", features = ["chrono"] }
owo-colors = "4.2"
# OSC
rosc = "0.11"
