[package]
name = "vibe"
version = "0.1.2"
description = "A Tauri App"
authors = ["Saplyn"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
built = { version = "0.8", features = ["chrono"] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
tauri-plugin-log = "2"
log = "0.4"
chrono = "0.4"
built = { version = "0.8", features = ["chrono"] }
owo-colors = "4.2"
